multiple tags functionality

--- a/app/views/links/link_filter.erb
+++ b/app/views/links/link_filter.erb
@@ -1,6 +1,6 @@
 <h1>Filter Results </h1>
 
-<ul id='filter links'>
+<ul id='filter_links'>
   <% @filter_links.each do |tag| %>
     <li>
       Title: <%= tag.title %>
