--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -4,8 +4,7 @@
 <ul id='links'>
   <% @links.each do |link| %>
     <li>
-      Title: <%= link.title %>
-      URL: <%= link.url %>
+      Title: <a href=<%= link.url %>> <%= link.title %> </a>
       Tags: <% link.tags.each do |a| %>
         <%= a.tag %>
       <% end %>
