--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -1,5 +1,5 @@
 <h1>Welcome to your bookmark manager!</h1>
-<h2><%= session[:email] %></h2>
+<h2><%= current_user.email %></h2>
 
 <ul id='links'>
   <% @links.each do |link| %>
